--- a/FindCore.ContactAPI/FindCore.ContactAPI.csproj
+++ b/FindCore.ContactAPI/FindCore.ContactAPI.csproj
@@ -6,10 +6,12 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
+    <Folder Include="Infrastucture\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="MongoDB.Driver" Version="2.7.0" />
   </ItemGroup>
 
 </Project>
