--- a/FindCore.UserAPI/FindCore.UserAPI.csproj
+++ b/FindCore.UserAPI/FindCore.UserAPI.csproj
@@ -9,8 +9,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Consul" Version="0.7.2.6" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="2.1.1" />
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.11" />
+    <PackageReference Include="NLog" Version="4.5.8" />
   </ItemGroup>
 
 </Project>
