--- a/FindCore.GatewayAPI/FindCore.GatewayAPI.csproj
+++ b/FindCore.GatewayAPI/FindCore.GatewayAPI.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Ocelot" Version="5.3.0" />
   </ItemGroup>
 
 </Project>
