--- a/Project.Infrastructure/Project.Infrastructure.csproj
+++ b/Project.Infrastructure/Project.Infrastructure.csproj
@@ -5,11 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0-preview2-35157" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.0-preview2-35157" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="EntityConfiguration\" />
+    <ProjectReference Include="..\Project.Domain\Project.Domain.csproj" />
   </ItemGroup>
 
 </Project>
